# Aveds-1-test-task-April2024

./: README.md  pyproject.toml
aveds_1_test_task/deploy/: Dockerfile  docker-compose.yml
aveds_1_test_task/internal/api/: exceptions.py  main.py
aveds_1_test_task/internal/api/handlers/v1/: __init__.py  auth.py  bot_inter.py
aveds_1_test_task/internal/bl/: aveds_bl.py
aveds_1_test_task/internal/bl/security/: bearer.py  cookies.py  jwt_token.py  passwords.py
aveds_1_test_task/internal/db/: base.py
aveds_1_test_task/internal/models/: aliases.py
aveds_1_test_task/internal/models/db/: users.py
aveds_1_test_task/internal/models/dto/: bearer.py
aveds_1_test_task/internal/models/http/: users.py
aveds_1_test_task/internal/settings/: api.py  config.py
aveds_1_test_task/internal/utils/: date_time.py  exceptions.py
